# mobileclip_cpp_trt

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml  traffic_light_classification.yaml
include/: classifier.hpp  image_encoder_trt.hpp  image_preprocess.hpp  logger.hpp  text_encoder_trt.hpp  text_preprocess.hpp  tokenizer.hpp
scripts/: download_mobileclip_models.py  evaluate_traffic_light.py  export_mobileclip_onnx.py
src/: batch_main.cpp  classifier.cpp  image_encoder_trt.cpp  image_preprocess.cpp  logger.cpp  main.cpp  text_encoder_trt.cpp  text_preprocess.cpp  tokenizer.cpp
